二期一次网站war包、服务器、数据库结构等备份

--- a/GreenPlatform-lv2/src/main/resources/templates/login/register.html
+++ b/GreenPlatform-lv2/src/main/resources/templates/login/register.html
@@ -18,10 +18,15 @@
         <div class="login-title">
             <h2>用户注册</h2>
         </div>
-        <div class="login-content" id="loginForm">
-            <div class="row" id="registerForm">
+        <div class="login-content" id="registerForm">
+            <div class="row">
                 <div class="col-md-12 col-xs-12">
                     <input type="text" id="cLoginname" name="cLoginname" placeholder="设置会员名">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 col-xs-12">
+                    <input type="text" id="cYqm" name="cYqm" placeholder="请输入邀请人手机号码或邀请人登录名">
                 </div>
             </div>
             <div class="row">
