--- a/GreenPlatform-lv2/src/main/resources/templates/plate/yhgl/nltx.html
+++ b/GreenPlatform-lv2/src/main/resources/templates/plate/yhgl/nltx.html
@@ -61,6 +61,22 @@
             </tr>
             <tr>
                 <td align="right">
+                    <label for="nNlhz" class="control-label">总能量数:</label>
+                </td>
+                <td align="left">
+                    <span class="nNlhz text-danger"></span>
+                    <input type="hidden" id="nNlhz">
+                </td>
+                <td align="right">
+                    <label for="n_zed" class="control-label">提现额度:</label>
+                </td>
+                <td align="left">
+                    <span class="n_zed text-danger"></span>
+                    <input type="hidden" id="n_zed">
+                </td>
+            </tr>
+            <tr>
+                <td align="right">
                     <label for="cEmail" class="control-label">电子邮箱:</label>
                 </td>
                 <td align="left">
@@ -108,13 +124,13 @@
                     <label for="dFksj" class="control-label"><i class="require">*</i>付款时间:</label>
                 </td>
                 <td align="left">
-                    <input type="text" class="form-control" onclick="WdatePicker({dateFmt:'yyyy-MM-dd HH:mm:ss'})"  id="dFksj" name="dFksj" placeholder="请输入付款时间">
+                    <input type="text" class="form-control" id="dFksj" name="dFksj" placeholder="请输入付款时间">
                 </td>
                 <td align="right">
                     <label for="dSksj" class="control-label"><i class="require">*</i>收款时间:</label>
                 </td>
                 <td align="left">
-                    <input type="text" class="form-control" onclick="WdatePicker({dateFmt:'yyyy-MM-dd HH:mm:ss'})"  id="dSksj" name="dSksj" placeholder="请输入收款时间">
+                    <input type="text" class="form-control" id="dSksj" name="dSksj" placeholder="请输入收款时间">
                 </td>
             </tr>
             <tr>
