--- a/GreenPlatform-lv2/src/main/resources/templates/web/myAccount/jbxx.html
+++ b/GreenPlatform-lv2/src/main/resources/templates/web/myAccount/jbxx.html
@@ -33,7 +33,15 @@
                 </tr>
                 <tr>
                     <td>我的点赞</td>
-                    <td align="right"><span class="badge" th:text="'M'+${loginuserAccountJbxx.n_dzzl}">/span></td>
+                    <td align="right"><span class="badge" th:text="'M'+${loginuserAccountJbxx.n_dzzl}"></span></td>
+                </tr>
+                <tr>
+                    <td>我的提现额度</td>
+                    <td align="right"><span class="badge" th:text="'￥'+${loginuserAccountJbxx.n_txed}"></span></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
                 </tr>
             </table>
         </div>
