--- a/GreenPlatform-lv2/src/main/resources/templates/web/myAccount/main.html
+++ b/GreenPlatform-lv2/src/main/resources/templates/web/myAccount/main.html
@@ -30,9 +30,9 @@
                     <a class="text-primary" id="certificationBtn">【实名制】</a>
                 </div>
 
-                <div class="usernameBoxDesc" th:attr="style=${loginuserAccount[0].cIssmz} == '0' ? 'display: none':''">
+                <!--<div class="usernameBoxDesc" th:attr="style=${loginuserAccount[0].cIssmz} == '0' ? 'display: none':''">
                     <a class="text-primary" id="btnInviteUser">【邀请好友】</a>
-                </div>
+                </div>-->
 
 
             </div>
