--- a/GreenPlatform-lv2/src/main/resources/templates/web/home.html
+++ b/GreenPlatform-lv2/src/main/resources/templates/web/home.html
@@ -35,7 +35,7 @@
         </ol>
 
         <div class="carousel-inner" role="listbox">
-            <div class="item active"  th:each="tGreenSpSpmxList : ${loginuserHome.owerTGreenSpSpmxList}">
+            <div class="item active" data-value="1"  th:each="tGreenSpSpmxList : ${loginuserHome.owerTGreenSpSpmxList}">
                 <img src="../../publicImg/telBg.jpg" alt="...">
                 <div class="carousel-caption">
                     <!--攻略-->
@@ -147,21 +147,39 @@
                 <h4 class="modal-title" id="legalMyModalLabel">《绿沙平台使用机制》</h4>
             </div>
             <div class="modal-body">
-                <h4><strong>平台使用机制：</strong></h4>
-                <p>1.每位用户必须进行实名注册才能正常使用平台功能。</p>
+                <h4><strong>平台攻略平台机制说明：</strong></h4>
+                <p>1.用户必须进行实名注册才能进行种植任务。</p>
                 <p>2.平台部分功能使用说明：</p>
-                <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp A、种植任务规则（每位用户每天登录平台完成主页面对种植植物进行浇水、施肥、沐浴阳光，当天种植任务才算完成。）</p>
-                <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp B、金币获取规则（每位用户可以每天完成种植任务、成功分享好友、植物捐赠来获取金币，通过主页面进行金币点赞获取排名。）</p>
-                <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp C、金币点赞排名奖励规则（排名累积到10万金币，平台会自动根据排名瓜分相应的奖励给用户。第1名：奖励88绿沙能量。第2名：奖励58绿沙能量。第3名：奖励38绿沙能量。第4~10名：奖励18绿沙能量。第11~50名：奖励8绿沙能量。第51~100名：奖励2绿沙能量。第101以上随机数量金币。）</p>
-                <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp D、能量排名规则（用户只要每次获得能量奖励，能量排名就会每次累积，主页面只显示能量排名前十名。）</p>
-                <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp E、能量获取规则（可以通过完成种植任务在平台捐赠，成功分享好友及金币点赞获取相应能量奖励。）</p>
-                <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp F、能量奖励规则（a.新用户完成注册及实名认证，平台会奖励价值100能量的仙人掌，完成一个月的种植任务可以获得112的能量奖励，可提现，可继续购买种子进行种植获得能量奖励。b.完成种植任务成功捐赠，每次可获得种植植物价值的12%作为任务奖励。c.成功分享好友，好友完成第一次种植任务，师傅可获得105的能量奖励，好友第二次开始完成的每次种植任务，师傅都可以获得好友种植植物价值的5%作为任务奖励。</p>
-                <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp G、账号等级升级规则（每个月持续完成任务，持续三个月账户升一级，升级后每次植物捐赠完成，在原有12%基础上增加2%的绿沙能量作为奖励。账号升到第三级，在原有12%基础上增加3%的绿沙能量作为奖励。账号升至第四级，在原有12%基础上增加5%的绿沙能量作为奖励。账户最高等级为四级。）</p>
-                <p>3.植物种植说明（用户只有每天持续完成种植任务，持续一个月才算真正完成种植任务，才能进行平台植物捐赠获取能量奖励，如果其中有一天用户忘记完成种植任务，种植任务会重新从第一天算起，每位用户一定要记住每天完成种植任务。）</p>
-                <p>4.提现规则：账户必须有种植一棵植物的情况下方可提现，最低100能量起提。</p>
-                <p>5.邀请好友只有用我们自己账户里面的邀请码邀请注册才能获得平台奖励。</p>
-                <p>6.提现及充值请加微信客服，更高的效率以及资金安全。注意：账户能量满100才能提现！</p>
-                <p>7.用户在使用过程中遇到任何不清楚的问题，请咨询微信客服。</p>
+                <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp （1）种植任务说明：每天登录平台对种植植物进行浇水、施肥、沐浴阳光，当天种植任务才算完成。</p>
+                <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp （2）金币奖励说明：完成当天种植任务奖励50金币，成功分享一名好友注册奖励1000金币，每轮植物捐赠成功奖励相应金币。</p>
+                <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp （3）金币点赞排名说明：平台点赞累积到一定数量金币，平台会自动根据排名瓜分相应能量及金币奖励。
+                    第1名：奖励188绿沙能量。
+                    第2名：奖励158绿沙能量。
+                    第3名：奖励128绿沙能量。
+                    第4~10名：奖励58绿沙能量。
+                    第11~50名：奖励38绿沙能量。
+                    第51~100名：奖励18绿沙能量。
+                    第101名以上：奖励随机金币。
+                    （点赞获取排名规则：点赞一次会消耗50金币；每个名次仅限1位用户，如有多位用户达到同一个点赞数，则先达成的用户将获得优先的名次；每轮排名奖励瓜分结束，会自动进行下一轮点赞排名。）
+                </p>
+                <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp （4）能量排名说明：用户只要每次获得能量奖励，能量排名就会每次累积，主页面只显示能量排名前十名。</p>
+                <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp （5）能量获取说明：
+                                                            a.完成30天种植任务，捐赠植物即可获得相应能量奖励，种植植物越贵，植物完成捐赠获得能量奖励就越多。
+                    b.邀请好友种植，好友完成第一个月种植任务，师傅可获得105的能量奖励，如果好友后期继续种植，每完成一次植物捐赠，师傅可获得植物价值5%的能量奖励。
+                </p>
+                <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp （6）账户等级升级及降级说明：
+                                                            a.持续完成3次植物捐赠，账户等级升1级，目前最高等级为4级。
+                                                            b.账户等级1级，每次植物捐赠成功，可获得捐赠植物价值12%的能量奖励。账户等级升至2级，每次植物捐赠成功，可获得捐赠植物价值14%的能量奖励。账户等级升至3级，每次植物捐赠成功，可获得捐赠植物价值15%的能量奖励。账户等级升至4级，每次植物捐赠成功，可获得捐赠植物价值17%的能量奖励。
+                                                            c.账户有一个月未进行种植，账户等级降至1级。
+                </p>
+                <p>3.植物种植任务补签说明：用户每天登陆平台给自己植物进行浇水、施肥、沐浴阳光才算完成当天任务；如果忘记当天任务，第二天可以去补签任务，一个月有3次补签机会；持续忘记完成种植任务两天以上，本次种植任务会自动回到第一天重新开始。</p>
+                <p>4.我的额度说明：每次完成种植任务捐赠，可获得种植植物价值的30%作为提现额度奖励，额度用不完会自动积累，不归零。</p>
+                <p>5.提现规则说明：账户必须有一棵植物，同时能量100以上才能提现；提现不能超过我的额度，提现账户和收款账户必须是同一人；点击提现直接下载蝙蝠App通过蝙蝠ID加客服进行提现；提现24小时内到账。</p>
+                <p>6.分享好友说明：邀请好友必须用自己账户邀请码邀请注册才能获得相应奖励，邀请码为注册时的用户名或手机号码，一个月每位用户有5个邀请名额，每月自动更新。</p>
+                <p>7.咨询问题说明：每位用户在使用过程中遇到任何不清楚的问题，以及账户问题都可以直接咨询你的分享人，如果问题分享人也解决不了，可以直接反馈给平台客服进行处理。</p>
+                <p>8.平台升级优化说明：平台为了更好、更高效率的服务用户，以及让平台越来越好，会不定期对平台进行优化以及升级，第一时间会进行通知。</p>
+                <p>9.账户操作说明：每位用户必须遵守平台使用规则，一人一号，如果在使用过程中，发现违规操作账户，一旦核实存在，平台会进行永久封号处理，希望我们大家共同监督维护，让平台越来越好。</p>
+                <p>10.平台客服在线时间：上午10:00点——下午17:00点。</p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-primary center-block" data-dismiss="modal">关&nbsp&nbsp&nbsp&nbsp闭</button>
@@ -178,6 +196,22 @@
             <div class="modal-content">
                 <div class="modal-body">
 
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- 用户账下无种子正在种植模态框 -->
+<div class="modal fade bs-example-modal-sm" id="noZzModal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+    <div class="modal-dialog modal-sm" role="document">
+        <div class="modal-content">
+            <div class="modal-content">
+                <div class="modal-body" id="noZzContent">
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-success" data-dismiss="modal">关&nbsp&nbsp&nbsp闭</button>
                 </div>
             </div>
         </div>
