二期部署后小问题已修改调整完毕

--- a/GreenPlatform-lv2/src/main/resources/static/style/web/myAccount/nlgl.css
+++ b/GreenPlatform-lv2/src/main/resources/static/style/web/myAccount/nlgl.css
@@ -48,6 +48,12 @@ html,body{
     font-weight: bold;
 }
 
+.contentBoxWrap table tr td img{
+    width: 25px;
+    height: 25px;
+    margin-right: 15px;
+}
+
 /*底部返回按钮*/
 .footerBtn{
     width: 50%;
