--- a/GreenPlatform-lv2/src/main/resources/templates/web/myAccount/main.html
+++ b/GreenPlatform-lv2/src/main/resources/templates/web/myAccount/main.html
@@ -75,12 +75,14 @@
                     <span class="glyphicon glyphicon-chevron-right linkIcon"></span>
                 </a>
             </li>
-            <li>
-                <a id="loginoutBtn">
-                    <span class="linkImg button">退出登录</span>
-                </a>
-            </li>
         </ul>
+    </div>
+    <div id="footerBox">
+        <div class="col-xs-12">
+            <button id="loginoutBtn" class="btn btn-lg btn-block btn-success">
+                退出登录
+            </button>
+        </div>
     </div>
 </div>
 
