--- a/GreenPlatform-lv2/src/main/resources/templates/web/myAccount/nlgl.html
+++ b/GreenPlatform-lv2/src/main/resources/templates/web/myAccount/nlgl.html
@@ -24,29 +24,28 @@
         <div class="contentBoxWrap">
             <table class="table">
                 <tr>
-                    <td>我的能量</td>
+                    <td><img src="/publicImg/myAccount/nlgl/wdnl.png" alt="">我的能量</td>
                     <td align="center"><span class="badge" th:text="'￥'+${loginuserAccountNlgl.n_nlhz}"></span></td>
                     <td align="right">
-                        <!--<button class="btn btn-primary btn-sm" data-toggle="modal" data-target="#customModel">充值</button>-->
                         <button class="btn btn-success btn-sm" data-toggle="modal" data-target="#customModel">提现</button>
                     </td>
                 </tr>
                 <tr>
-                    <td>捐赠记录</td>
+                    <td><img src="/publicImg/myAccount/nlgl/jzjl.png" alt="">捐赠记录</td>
                     <td></td>
                     <td align="right">
                         <a id="jzjlBtn" class="btn btn-success btn-sm">查询</a>
                     </td>
                 </tr>
                 <tr>
-                    <td>提现记录</td>
+                    <td><img src="/publicImg/myAccount/nlgl/txjl.png" alt="">提现记录</td>
                     <td></td>
                     <td align="right">
                         <a id="txjlBtn" class="btn btn-success btn-sm">查询</a>
                     </td>
                 </tr>
                 <tr>
-                    <td>购买记录</td>
+                    <td><img src="/publicImg/myAccount/nlgl/gmjl.png" alt="">购买记录</td>
                     <td></td>
                     <td align="right">
                         <a id="czjlBtn" class="btn btn-success btn-sm">查询</a>
