--- a/GreenPlatform-lv2/src/main/resources/templates/web/myAccount/nlgl/jzjl.html
+++ b/GreenPlatform-lv2/src/main/resources/templates/web/myAccount/nlgl/jzjl.html
@@ -23,7 +23,7 @@
         <div class="contentBoxWrap">
             <div class="row">
                 <div class="col-md-8 col-xs-8">
-                    <input type="text" id="cMonth" class="form-control" placeholder="请选择需要查询的月份" onclick="WdatePicker({dateFmt:'yyyy-MM'})">
+                    <input type="month" id="cMonth" class="form-control" placeholder="请选择需要查询的月份" >
                 </div>
                 <div class="col-md-4 col-xs-4">
                     <button class="btn btn-success" id="btnSearch">查询</button>
