--- a/GreenPlatform-lv2/src/main/resources/templates/plate/yhgl/nltx.html
+++ b/GreenPlatform-lv2/src/main/resources/templates/plate/yhgl/nltx.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap.css">
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrap-dialog.css">
     <link rel="stylesheet" href="/publicFrame/bootstrap-3.3.7-dist/css/bootstrapValidator.min.css">
+    <link rel="stylesheet" href="/publicFrame/bootstrap-datetimepicker-master/css/bootstrap-datetimepicker.min.css">
     <style>
         .table label{
             line-height: 35px;
@@ -124,13 +125,13 @@
                     <label for="dFksj" class="control-label"><i class="require">*</i>付款时间:</label>
                 </td>
                 <td align="left">
-                    <input type="text" class="form-control" id="dFksj" name="dFksj" placeholder="请输入付款时间">
+                    <input type="text" class="timeInput form-control" id="dFksj" name="dFksj" placeholder="请输入付款时间">
                 </td>
                 <td align="right">
                     <label for="dSksj" class="control-label"><i class="require">*</i>收款时间:</label>
                 </td>
                 <td align="left">
-                    <input type="text" class="form-control" id="dSksj" name="dSksj" placeholder="请输入收款时间">
+                    <input type="text" class="timeInput form-control" id="dSksj" name="dSksj" placeholder="请输入收款时间">
                 </td>
             </tr>
             <tr>
@@ -221,7 +222,8 @@
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrap-dialog.js"></script>
 <script src="/publicFrame/bootstrap-3.3.7-dist/js/bootstrapValidator.min.js"></script>
-<script src="/publicFrame/My97DatePicker/WdatePicker.js"></script>
+<script src="/publicFrame/bootstrap-datetimepicker-master/js/bootstrap-datetimepicker.min.js"></script>
+<script src="/publicFrame/bootstrap-datetimepicker-master/js/locales/bootstrap-datetimepicker.zh-CN.js"></script>
 <script src="/publicJs/publicCommon.js"></script>
 <script src="/publicJs/publicyw.js"></script>
 <script src="/publicJs/SendRequest.js"></script>
