--- a/miniProgram/propertyMag/miniprogram/pages/public/secondPages/payPropertyFee/payPropertyFee.wxml
+++ b/miniProgram/propertyMag/miniprogram/pages/public/secondPages/payPropertyFee/payPropertyFee.wxml
@@ -1,7 +1,7 @@
 <view class="page">
     <view class="page__bd">
         <view class="weui-panel weui-panel_access">
-            <view class="weui-panel__hd">欠费缴纳</view>
+            <view class="weui-panel__hd">欠费总览</view>
             <view class="weui-panel__bd">
                 <view class="weui-media-box weui-media-box_text">
                     <view class="weui-media-box__desc">
@@ -10,9 +10,9 @@
                           <text>欠费金额：</text>
                           <text>{{houseCostList.money}}元</text>
                         </view>
-                        <view>
-                          <text>户主：</text>
-                          <text>{{userInfoDesc.username}}</text>
+                        <view wx:if="{{houseCostList.damagefees >= 0}}">
+                          <text>违约金：</text>
+                          <text>{{houseCostList.damagefees}}元</text>
                         </view>
                       </view>
                       <view class="line">
@@ -37,7 +37,37 @@
               </view>
             </view>
         </view>
-        <view class="weui-panel weui-panel_access">
+
+        <view class="weui-panel weui-panel_access" wx:for="{{houseCostList.list}}">
+            <view class="weui-panel__hd">欠费明细</view>
+            <view class="weui-panel__bd">
+                <view class="weui-media-box weui-media-box_text">
+                    <view class="weui-media-box__desc">
+                      <view class="line">
+                        <view>
+                          <text>收费项目：</text>
+                          <text>{{item.costItemName}}</text>
+                        </view>
+                      </view>
+                      <view class="line">
+                        <view>
+                          <text>欠费时间：</text>
+                          <text>{{item.costStartDate}}至{{item.costEndDate}}</text>
+                        </view>
+                      </view>
+                      <view class="line">
+                        <view>
+                          <text>欠费金额：</text>
+                          <text>{{item.receivableMoney}}元</text>
+                        </view>
+                      </view>
+                    </view>
+                </view>
+            </view>
+        </view>
+
+
+        <!-- <view class="weui-panel weui-panel_access">
             <view class="weui-panel__hd">费用预存</view>
             <view class="weui-panel__bd">
                 <view class="weui-media-box weui-media-box_text">
@@ -63,6 +93,6 @@
                 </navigator>
               </view>
             </view>
-        </view>
+        </view> -->
     </view>
 </view>
